--- a/Client/package.json
+++ b/Client/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "axios": "^1.2.1",
     "lottie-react": "^2.3.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "sweetalert2": "^11.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   },
