--- a/Api rest/package.json
+++ b/Api rest/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
