--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "firebase": "^9.22.2",
-    "lottie-react": "^2.3.1",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
